--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,7 @@ classes/
 # Maven
 ######################
 /log/
-/target/
+!target/*.jar
 ######################
 # Gradle
 ######################
